<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCrave</string>
    <string name="action_nutrition">Nutrition</string>
    <string name="action_consent">Consent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="image_info">"Imagine the description for the 10 seconds"</string>
    <string name="info">Info</string>
    <string name="choose">Choose</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="rate_the_image">How vividly did you imagine this image</string>
    <string name="craving_decision">Craving Decision</string>
    <string name="save">Save</string>
    <string name="healthy_snack">Healthy Snack</string>
    <string name="unhealthy_snack">Unhealthy Snack</string>
    <string name="show_another_image">Show another image</string>
    <string name="undo_previous_activity">Undo previous activity</string>
    <string name="undo">Undo</string>
    <string name="seconds">seconds remaining</string>
    <string name="rating_no_image">No image</string>
    <string name="rating_perfect_image">Perfect image</string>
    <string name="error_no_rating">Please rate the image before continuing</string>
    <string name="error_icrave_disabled">Please wait %1$s minutes before using iCrave or Undo your previous action</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_are_you_sure">Are you sure?</string>
    <string name="title_activity_consent">Consent</string>
    <string name="title_activity_nutrition">Nutrition</string>
    <string name="refresh">Refresh</string>
    <string name="synchronise">Synchronise</string>
    <string name="visualise">Visualise</string>
    <string name="title_activity_icrave_options">iCrave Options</string>
    <string name="sync_result_msg">Successfully synced %1$s of %2$s</string>
    <string name="could_not_sync_msg">Could not sync at this time, please try later.</string>
    <string name="nothing_to_sync_msg">Nothing to sync</string>

</resources>
