<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualise"
        android:id="@+id/button_visualise"
        style="@style/btnStyleBlue" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_save"
        style="@style/btnStyleGreen" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/healthy_snack"
        android:id="@+id/button_healthy_snack"
        style="@style/btnStyleYellow" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unhealthy_snack"
        android:id="@+id/button_unhealthy_snack"
        style="@style/btnStyleOrange" />
</LinearLayout>