<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aqib.icrave.ResultActivity$PlaceholderFragment">

    <TextView
        android:text="@string/rate_the_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:stepSize="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/craving_decision"
            android:layout_below="@+id/rating"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:id="@+id/textView2"
            android:gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_save"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthy_snack"
            android:id="@+id/button_healthy_snack"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button_save"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unhealthy_snack"
            android:id="@+id/button_unhealthy_snack"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button_healthy_snack"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_another_image"
            android:id="@+id/button_another_image"
            android:layout_below="@+id/button_unhealthy_snack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
